# knowledge

./: .gitattributes  .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
cables/: know-aha-sync.toml  know-arxiv-sync.toml  know-arxiv.toml  know-confluence-sync.toml  know-follow.toml  know-github-view.toml  know-jira-sync.toml  know-local.toml  know-releases-sync.toml  know-sites-browse.toml  know-videos-browse.toml  know.toml
docs/: COMMANDS.md  README.md  TVs.md  cli.md  know-skill.md  site-spikes.md  television.md
evaluation/: know-skill.yaml
knowledge/: __init__.py  cli.py  store.py
okf/: index.md  project.md  specification.md
scripts/: check_coverage.py  run_site_batch_spikes.py  run_site_spikes.py
skills/: evaluate.yaml
tests/: test_brave_search.py  test_browse.py  test_browse_coverage.py  test_browse_extended.py  test_build_semantic_okf_adaptive_skill.py  test_build_semantic_okf_classical_skill.py  test_build_semantic_okf_embeddings_skill.py  test_build_semantic_okf_skill.py  test_cli.py  test_confluence_8h_campaign.py  test_confluence_8h_live_fixtures.py  test_consult_semantic_okf_adaptive_skill.py  test_consult_semantic_okf_classical_skill.py  test_consult_semantic_okf_embeddings_skill.py  test_consult_semantic_okf_harbor_graph_ensemble_evolutions.py  test_consult_semantic_okf_harbor_legacy_embeddings.py  test_consult_semantic_okf_skill.py  test_coverage_gate.py  test_coverage_paths.py  test_endocrine_hygiene_atomic_publication.py  test_endocrine_hygiene_hard_claim_requirements.py  test_endocrine_hygiene_reporting_integrity.py  test_follow.py  test_okf.py  (+65 more)
(+3233 files in other folders)
