[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge"
version = "0.1.0"
description = "A CLI tool to manage a local knowledge base from multiple sources"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27",
    "gitpython>=3.1",
    "markdownify>=0.12",
    "python-frontmatter>=1.1",
    "crawl4ai>=0.4",
    "atlassian-python-api>=3.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[project.scripts]
knowledge = "knowledge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["knowledge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
